%% title: ERD 01a - Business / Profile / Role / Program
%% Module: Authentication / Profile / Business / Access Management (part 1 of 2, see erd-01b-access-invite-audit.mmd for invite/audit/task)
%% Common audit columns inherited from BaseEntity (id PK, created_by, created_date, updated_by, updated_date, is_delete, delete_by, delete_date, xmin/row_version)
%% are listed inline on each entity below rather than in a separate box, since they are real DB columns.
%% BaseBusinessEntity additionally adds a business_id column (see entities marked "extends BaseBusinessEntity" in source).

erDiagram
    direction LR

%%{init: {"theme": "base", "themeVariables": {"primaryColor": "#ffffff", "primaryBorderColor": "#000000", "primaryTextColor": "#000000", "lineColor": "#000000", "secondaryColor": "#ffffff", "tertiaryColor": "#ffffff"}, "er": {"diagramPadding": 8, "entityPadding": 12, "minEntityWidth": 90, "minEntityHeight": 40, "fontSize": 22}}}%%
    su_profile {
        UUID id
        string user_id
        string tax_id
        UUID title_id
        UUID country_id
        UUID province_id
        UUID district_id
        UUID sub_district_id
        string first_name_en
        string middle_name_en
        string last_name_en
        string first_name_local
        string middle_name_local
        string last_name_local
        boolean support_local_address
        string address_en
        string address_local
        string zip_code
        string email
        string phone_number
        UUID upload_group_id
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    su_business {
        UUID id
        string tax_id
        string business_code
        string branch_code
        string person_type
        UUID title_id
        string first_name_en
        string middle_name_en
        string last_name_en
        string first_name_local
        string middle_name_local
        string last_name_local
        UUID country_id
        boolean support_local_address
        string address_en
        string address_local
        UUID province_id
        UUID district_id
        UUID sub_district_id
        string zip_code
        string email
        string phone_number
        string fax
        UUID upload_group_id
        boolean is_active
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    su_business_role {
        UUID id
        UUID business_id
        UUID parent_role_id
        string role_code
        string role_name_en
        string role_name_local
        string role_level
        int sort_order
        boolean is_active
        string color
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    su_business_role_program {
        UUID id
        UUID business_role_id
        UUID program_id
        boolean is_active
        boolean is_add
        boolean is_back
        boolean is_print
        boolean is_remove
        boolean is_save
        boolean is_search
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    su_user_business {
        UUID id
        UUID business_id
        string user_id
        boolean is_default
        boolean is_active
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    su_user_business_role {
        UUID id
        UUID user_business_id
        UUID business_role_id
        boolean is_primary
        boolean is_active
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    su_program {
        UUID id
        UUID parent_program_id
        string program_code
        string icon
        string name_en
        string name_local
        string route_path
        int sort_order
        boolean is_active
        boolean is_add
        boolean is_back
        boolean is_print
        boolean is_remove
        boolean is_save
        boolean is_search
        string created_by
        timestamp created_date
        string updated_by
        timestamp updated_date
        boolean is_delete
        string delete_by
        timestamp delete_date
        int row_version
    }

    %% Relationships

    su_business ||--o{ su_user_business : "has members"
    su_business ||--o{ su_business_role : "defines roles"

    su_business_role ||--o{ su_business_role : "parent of"
    su_business_role ||--o{ su_business_role_program : "grants permission on"
    su_business_role ||--o{ su_user_business_role : "assigned to"

    su_program ||--o{ su_business_role_program : "included in"
    su_program ||--o{ su_program : "parent of"

    su_user_business ||--o{ su_user_business_role : "has role assignments"

